--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -11,12 +14,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
     "emailjs-com": "^3.2.0",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
