--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +21,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Local environment variables
+# Ignore all .env files except .env.example
+.env
+.env.*
+!.env.example
