--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "dev": "vite --host",
+    "dev": "concurrently \"npm:dev:vite\" \"npm:dev:server\"",
+    "dev:vite": "vite --host",
+    "dev:server": "node server.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,6 +17,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
+    "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
@@ -30,9 +33,12 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "express": "^5.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6"
